# kloxki

./: .gitignore  README.md  package.json  webpack.config.js
rust/mcpack/: Cargo.toml  jsons.msgpack  models.msgpack
rust/mcpack/src/: main.rs
src/: index.ts
src/audio/: AudioManager.ts  SoundEvent.ts  SoundEvents.ts
src/block/: Block.ts  BlockProperties.ts  BlockRegistry.ts  BlockStateMeta.ts  Blocks.ts  BlocksHelper.ts  MaterialColor.ts  SoundType.ts
src/block/model/: Model.ts  ModelRegistry.ts
src/client/: Controls.ts  Display.ts  Klocki.ts
src/client/entity/: KlockiEntityBase.ts  KlockiEntityCreeper.ts  KlockiEntityItemFrame.ts  KlockiEntityLiving.ts  KlockiEntityPlayer.ts  KlockiEntityPlayerMP.ts  KlockiEntityPlayerSP.ts  RenderBox.ts  RenderLayerVoxels.ts
src/client/gui/: ChatLine.ts  GuiChat.ts  GuiChatInput.ts  GuiOverlayEquipment.ts
src/client/imageutil/: GoImage.ts
src/client/network/: NetHandlerLoginClient.ts  NetHandlerPlayClient.ts
src/client/render/: EntityRenders.ts  RenderCreeper.ts  RenderEntityLiving.ts  RenderItemFrame.ts  RenderPlayer.ts
src/client/renderer/: FontRenderer.ts  UIRenderer.ts  WorldRenderer.ts
src/client/settings/: GameSettings.ts
src/client/shaders/: Shader.ts  ShaderLines.ts  ShaderMobs.ts  ShaderUI.ts  ShaderWorld.ts
src/client/txt/: TextureManager.ts
src/client/world/: BakeStack.ts  (+9 more)
src/item/: Item.ts  ItemRegistry.ts  Items.ts
src/nbt/: Nbt.ts
src/network/: NetworkManager.ts  NetworkWorker.ts  PacketBuffer.ts
src/pako/: deflate.js  inflate.js
src/util/: BitMap.ts  ChatColor.ts  Heap.ts  Timer.ts
(+12 files in other folders)
