[package]
name = "mcpack"
version = "0.1.0"
authors = ["Szperak <maciej.98@op.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
rmp-serde = "0.14.0"
serde_json = "1.0.44"
zip = "0.5.3"
regex = "1.3.1"
lazy_static = "1.4.0"
zopfli = "0.4.0"
